Fix QML imports deployment when using path

During deployment the value of LC_RPATH on the main
executable gets updated with a new value pointing
inside the app bundle. This happens before QML
import deployment, which means reading LC_RPATH
at QML import deployment time will not give the
correct value.

Use the cached value stored in the DeploymentInfo
structure instead, which will point back to the Qt
installation.

Task-number: QTBUG-47390
Change-Id: Ide84240de408d2338c9f7a68a73849263ce69dff
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>